--- a/style.css
+++ b/style.css
@@ -325,7 +325,7 @@ footer a:hover{
         display: none;
     }
     .div1{
-        height: 80vh;
+        height: 110vh;
         margin-top: 0;
     }
     .div11{
@@ -447,11 +447,11 @@ footer a:hover{
         width: 40%;
     }
     .div111 img{
-        width: 200px;
+        width: 320px;
     }
     .disc{
-        font-size: 0.6em;
-        margin-top: 10px;
+        font-size: 0.9em;
+        margin-top: 5px;
     }
     .span1{
         font-size: 1.2em;
@@ -463,21 +463,18 @@ footer a:hover{
         font-weight: bold;
     }
     .div14{
+        left: 7%;
         bottom: 1%;
-        transform: translate(-15%,-1%);
+        transform: translate(-7%,-1%);
     }
     .div14 span{
-        color: #a7a7a7;
         font-size: 16px;
     }
-    .div15 img{
-        width: 70%;
-    }
     .div15{
-        gap: px;
+        gap: 0px;
     }
     .div15 img{
-        width: 50%;
+        width: 60%;
     }
     .skills-bar{
         width: 120%;
@@ -496,6 +493,19 @@ footer a:hover{
     .ellipse img{
         width: 400px;
     }
+    .ccontainer form {
+        width: 670px;
+        height: 300px;
+    }
+    .ccontainer form input {
+        margin-bottom: 0px;
+    }
+    .ccontainer form h4 {
+        margin:10px;
+    }
+    .ccontainer form #btt {
+        margin-top: 10px;
+}
 }
 @media (min-width : 1600px){
     .parts{
